<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="11"
    android:orientation="vertical"
    android:background="@drawable/order_background"
    tools:context="edu.orangecoastcollege.cs273.ttran1272.inandout.SummaryActivity">

    <TextView
        android:id="@+id/placeOrderTitleTV"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="center|top"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingBottom="50dp"
        android:paddingTop="20dp"
        android:text="@string/place_an_order" />

    <TextView
        android:id="@+id/doubleDoubleTV"
        android:layout_column="0"
        android:layout_row="1"
        style="@style/LabelTextViewType"
        android:text="@string/double_double"
        android:onClick="placeOrderButton"/>


    <EditText
        android:id="@+id/doubleDoubleEditText"
        android:layout_column="1"
        android:layout_row="1"
        style="@style/EditTextViewType" />

    <TextView
        android:id="@+id/cheeseBurgerTV"
        style="@style/LabelTextViewType"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/cheese_burger" />

    <EditText
        android:id="@+id/cheeseBurgerEditText"
        style="@style/EditTextViewType"
        android:layout_column="1"
        android:layout_row="2" />

    <TextView
        android:id="@+id/frenchFriesTV"
        style="@style/LabelTextViewType"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/french_fries" />

    <EditText
        android:id="@+id/frenchFriesEditText"
        style="@style/EditTextViewType"
        android:layout_column="1"
        android:layout_row="3"/>

    <TextView
        android:id="@+id/shakesTV"
        style="@style/LabelTextViewType"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/shakes" />

    <EditText
        android:id="@+id/shakesEditText"
        style="@style/EditTextViewType"
        android:layout_column="1"
        android:layout_row="4" />

    <TextView
        android:id="@+id/fountainDrinkTV"
        android:layout_columnSpan="2"
        android:layout_row="5"
        android:layout_column="0"
        style="@style/LabelTextViewType"
        android:text="@string/fountain_drink" />

    <TextView
        android:id="@+id/smallSizeTV"
        style="@style/LabelTextViewType"
        android:layout_column="0"
        android:layout_row="6"
        android:text="@string/small_size" />

    <EditText
        android:id="@+id/smallSizeEditText"
        style="@style/EditTextViewType"
        android:layout_column="1"
        android:layout_row="6" />

    <TextView
        android:id="@+id/mediumSizeTV"
        style="@style/LabelTextViewType"
        android:layout_column="0"
        android:layout_row="7"
        android:text="@string/medium_size" />

    <EditText
        android:id="@+id/mediumSizeEditText"
        style="@style/EditTextViewType"
        android:layout_column="1"
        android:layout_row="7" />

    <TextView
        android:id="@+id/largeSizeTV"
        style="@style/LabelTextViewType"
        android:layout_column="0"
        android:layout_row="8"
        android:text="@string/large_size" />

    <EditText
        android:id="@+id/largeSizeEditText"
        style="@style/EditTextViewType"
        android:layout_column="1"
        android:layout_row="8" />


    <TextView
        android:layout_column="0"
        android:layout_row="9" />

    <Button
        android:id="@+id/placeOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="10"
        android:textSize="20sp"
        android:layout_gravity="top|center"
        android:text="@string/place_order_button_text" />

</GridLayout>
